fixed responsive topnav not entirely visible on small screen

--- a/app/static/css/main-008.css
+++ b/app/static/css/main-008.css
@@ -657,7 +657,6 @@ footer {
     color: var(--text-color);
     text-align: center;
     padding: 5px;
-    padding-top: 1px;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -667,6 +666,14 @@ footer {
     background-color: var(--bg-color);
     max-height: 3rem;
     border-top: 1px solid var(--secondary-color);
+}
+
+footer .theme-switch i {
+    font-size: 1.4rem;
+}
+
+footer .theme-switch {
+    line-height: 1.4rem;
 }
 
 .social-icons a {
@@ -790,6 +797,8 @@ footer {
         border-radius: 25px;
         z-index: 10;
         overflow: hidden;
+        overflow-y: auto;
+        max-height: 90vh;
     }
 
     .topnav.responsive .program-dropdown-content {
@@ -838,6 +847,10 @@ footer {
     }
     .grid-items-container .item .item-details h3 {
         font-size: 1.05rem;
+    }
+
+    .social-icons a {
+        margin: 0 5px;
     }
 }
 
